service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: backend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
  selector:
    app: guestbook-ui
